--- a/project-horsepower/horsepower-scatter-plot.ipynb
+++ b/project-horsepower/horsepower-scatter-plot.ipynb
@@ -19,7 +19,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import scipy.stats as sts\n",
-    "from scipy.stats import linregress\n"
+    "from scipy.stats import linregress"
    ]
   },
   {
