--- a/project-us-capitals/us-capitals-maps.ipynb
+++ b/project-us-capitals/us-capitals-maps.ipynb
@@ -1047,7 +1047,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "625b27ea74cb48bc943170339455351b",
+       "model_id": "0d7570a2c2aa43fb8bd772d8a620ae8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1129,9 +1129,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Initial</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Municipal Population</th>\n",
+       "      <th>Metropolitan Population</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Capital</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Juneau</th>\n",
+       "      <td>AK</td>\n",
+       "      <td>63.588753</td>\n",
+       "      <td>-154.493062</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>1906.0</td>\n",
+       "      <td>2716.7</td>\n",
+       "      <td>32113.0</td>\n",
+       "      <td>32113.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Montgomery</th>\n",
+       "      <td>AL</td>\n",
+       "      <td>32.318231</td>\n",
+       "      <td>-86.902298</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1846.0</td>\n",
+       "      <td>159.8</td>\n",
+       "      <td>198525.0</td>\n",
+       "      <td>373290.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Little Rock</th>\n",
+       "      <td>AR</td>\n",
+       "      <td>35.201050</td>\n",
+       "      <td>-91.831833</td>\n",
+       "      <td>Arkansas</td>\n",
+       "      <td>1821.0</td>\n",
+       "      <td>116.2</td>\n",
+       "      <td>197312.0</td>\n",
+       "      <td>742384.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Phoenix</th>\n",
+       "      <td>AZ</td>\n",
+       "      <td>34.048928</td>\n",
+       "      <td>-111.093731</td>\n",
+       "      <td>Arizona</td>\n",
+       "      <td>1912.0</td>\n",
+       "      <td>517.6</td>\n",
+       "      <td>1680992.0</td>\n",
+       "      <td>4948203.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sacramento</th>\n",
+       "      <td>CA</td>\n",
+       "      <td>36.778261</td>\n",
+       "      <td>-119.417932</td>\n",
+       "      <td>California</td>\n",
+       "      <td>1854.0</td>\n",
+       "      <td>97.9</td>\n",
+       "      <td>513624.0</td>\n",
+       "      <td>2363730.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Initial        Lat         Lng       State    Year    Area  \\\n",
+       "Capital                                                                  \n",
+       "Juneau           AK  63.588753 -154.493062      Alaska  1906.0  2716.7   \n",
+       "Montgomery       AL  32.318231  -86.902298     Alabama  1846.0   159.8   \n",
+       "Little Rock      AR  35.201050  -91.831833    Arkansas  1821.0   116.2   \n",
+       "Phoenix          AZ  34.048928 -111.093731     Arizona  1912.0   517.6   \n",
+       "Sacramento       CA  36.778261 -119.417932  California  1854.0    97.9   \n",
+       "\n",
+       "             Municipal Population  Metropolitan Population  \n",
+       "Capital                                                     \n",
+       "Juneau                    32113.0                  32113.0  \n",
+       "Montgomery               198525.0                 373290.0  \n",
+       "Little Rock              197312.0                 742384.0  \n",
+       "Phoenix                 1680992.0                4948203.0  \n",
+       "Sacramento               513624.0                2363730.0  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create new dataframe to create a table to filter through\n",
     "states.set_index('Capital', inplace=True)\n",
@@ -1141,9 +1266,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Initial                             CA\n",
+       "Lat                            36.7783\n",
+       "Lng                           -119.418\n",
+       "State                       California\n",
+       "Year                              1854\n",
+       "Area                              97.9\n",
+       "Municipal Population            513624\n",
+       "Metropolitan Population    2.36373e+06\n",
+       "Name: Sacramento, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# locate an individual state\n",
     "states.loc['Sacramento']"
@@ -1151,9 +1295,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">  <thead>    <tr style=\"text-align: right;\">      <th></th>      <th>Initial</th>      <th>Lat</th>      <th>Lng</th>      <th>State</th>      <th>Year</th>      <th>Area</th>      <th>Municipal Population</th>      <th>Metropolitan Population</th>    </tr>    <tr>      <th>Capital</th>      <th></th>      <th></th>      <th></th>      <th></th>      <th></th>      <th></th>      <th></th>      <th></th>    </tr>  </thead>  <tbody>    <tr>      <th>Juneau</th>      <td>AK</td>      <td>63.588753</td>      <td>-154.493062</td>      <td>Alaska</td>      <td>1906.0</td>      <td>2716.70</td>      <td>32113.0</td>      <td>32113.0</td>    </tr>    <tr>      <th>Montgomery</th>      <td>AL</td>      <td>32.318231</td>      <td>-86.902298</td>      <td>Alabama</td>      <td>1846.0</td>      <td>159.80</td>      <td>198525.0</td>      <td>373290.0</td>    </tr>    <tr>      <th>Little Rock</th>      <td>AR</td>      <td>35.201050</td>      <td>-91.831833</td>      <td>Arkansas</td>      <td>1821.0</td>      <td>116.20</td>      <td>197312.0</td>      <td>742384.0</td>    </tr>    <tr>      <th>Phoenix</th>      <td>AZ</td>      <td>34.048928</td>      <td>-111.093731</td>      <td>Arizona</td>      <td>1912.0</td>      <td>517.60</td>      <td>1680992.0</td>      <td>4948203.0</td>    </tr>    <tr>      <th>Sacramento</th>      <td>CA</td>      <td>36.778261</td>      <td>-119.417932</td>      <td>California</td>      <td>1854.0</td>      <td>97.90</td>      <td>513624.0</td>      <td>2363730.0</td>    </tr>    <tr>      <th>Denver</th>      <td>CO</td>      <td>39.550051</td>      <td>-105.782067</td>      <td>Colorado</td>      <td>1867.0</td>      <td>153.30</td>      <td>727211.0</td>      <td>2967239.0</td>    </tr>    <tr>      <th>Hartford</th>      <td>CT</td>      <td>41.603221</td>      <td>-73.087749</td>      <td>Connecticut</td>      <td>1875.0</td>      <td>17.30</td>      <td>122105.0</td>      <td>1204877.0</td>    </tr>    <tr>      <th>Dover</th>      <td>DE</td>      <td>38.910832</td>      <td>-75.527670</td>      <td>Delaware</td>      <td>1777.0</td>      <td>22.40</td>      <td>38079.0</td>      <td>180786.0</td>    </tr>    <tr>      <th>Tallahassee</th>      <td>FL</td>      <td>27.664827</td>      <td>-81.515754</td>      <td>Florida</td>      <td>1824.0</td>      <td>95.70</td>      <td>194500.0</td>      <td>387227.0</td>    </tr>    <tr>      <th>Atlanta</th>      <td>GA</td>      <td>32.157435</td>      <td>-82.907123</td>      <td>Georgia</td>      <td>1868.0</td>      <td>133.50</td>      <td>506811.0</td>      <td>6020364.0</td>    </tr>    <tr>      <th>Honolulu</th>      <td>HI</td>      <td>19.898682</td>      <td>-155.665857</td>      <td>Hawaii</td>      <td>1845.0</td>      <td>68.40</td>      <td>345064.0</td>      <td>974563.0</td>    </tr>    <tr>      <th>Des Moines</th>      <td>IA</td>      <td>41.878003</td>      <td>-93.097702</td>      <td>Iowa</td>      <td>1857.0</td>      <td>75.80</td>      <td>214237.0</td>      <td>699292.0</td>    </tr>    <tr>      <th>Boise</th>      <td>ID</td>      <td>44.068202</td>      <td>-114.742041</td>      <td>Idaho</td>      <td>1865.0</td>      <td>63.80</td>      <td>228959.0</td>      <td>749202.0</td>    </tr>    <tr>      <th>Springfield</th>      <td>IL</td>      <td>40.633125</td>      <td>-89.398528</td>      <td>Illinois</td>      <td>1837.0</td>      <td>54.00</td>      <td>114230.0</td>      <td>206868.0</td>    </tr>    <tr>      <th>Indianapolis</th>      <td>IN</td>      <td>40.551217</td>      <td>-85.602364</td>      <td>Indiana</td>      <td>1825.0</td>      <td>361.50</td>      <td>876384.0</td>      <td>2074537.0</td>    </tr>    <tr>      <th>Topeka</th>      <td>KS</td>      <td>39.011902</td>      <td>-98.484246</td>      <td>Kansas</td>      <td>1856.0</td>      <td>56.00</td>      <td>125310.0</td>      <td>231969.0</td>    </tr>    <tr>      <th>Frankfort</th>      <td>KY</td>      <td>37.839333</td>      <td>-84.270018</td>      <td>Kentucky</td>      <td>1792.0</td>      <td>14.70</td>      <td>27679.0</td>      <td>73663.0</td>    </tr>    <tr>      <th>Baton Rouge</th>      <td>LA</td>      <td>31.244823</td>      <td>-92.145024</td>      <td>Louisiana</td>      <td>1880.0</td>      <td>76.80</td>      <td>220236.0</td>      <td>854884.0</td>    </tr>    <tr>      <th>Boston</th>      <td>MA</td>      <td>42.407211</td>      <td>-71.382437</td>      <td>Massachusetts</td>      <td>1630.0</td>      <td>89.60</td>      <td>692600.0</td>      <td>4873019.0</td>    </tr>    <tr>      <th>Annapolis</th>      <td>MD</td>      <td>39.045755</td>      <td>-76.641271</td>      <td>Maryland</td>      <td>1694.0</td>      <td>6.73</td>      <td>39174.0</td>      <td>2800053.0</td>    </tr>    <tr>      <th>Augusta</th>      <td>ME</td>      <td>45.253783</td>      <td>-69.445469</td>      <td>Maine</td>      <td>1832.0</td>      <td>55.40</td>      <td>18681.0</td>      <td>122302.0</td>    </tr>    <tr>      <th>Lansing</th>      <td>MI</td>      <td>44.314844</td>      <td>-85.602364</td>      <td>Michigan</td>      <td>1847.0</td>      <td>35.00</td>      <td>118210.0</td>      <td>550391.0</td>    </tr>    <tr>      <th>Saint Paul</th>      <td>MN</td>      <td>46.729553</td>      <td>-94.685900</td>      <td>Minnesota</td>      <td>1849.0</td>      <td>52.80</td>      <td>308096.0</td>      <td>3654908.0</td>    </tr>    <tr>      <th>Jefferson City</th>      <td>MO</td>      <td>37.964253</td>      <td>-91.831833</td>      <td>Missouri</td>      <td>1826.0</td>      <td>27.30</td>      <td>42838.0</td>      <td>151235.0</td>    </tr>    <tr>      <th>Jackson</th>      <td>MS</td>      <td>32.354668</td>      <td>-89.398528</td>      <td>Mississippi</td>      <td>1821.0</td>      <td>104.90</td>      <td>160628.0</td>      <td>594806.0</td>    </tr>    <tr>      <th>Helena</th>      <td>MT</td>      <td>46.879682</td>      <td>-110.362566</td>      <td>Montana</td>      <td>1875.0</td>      <td>14.00</td>      <td>32315.0</td>      <td>77414.0</td>    </tr>    <tr>      <th>Raleigh</th>      <td>NC</td>      <td>35.759573</td>      <td>-79.019300</td>      <td>North Carolina</td>      <td>1792.0</td>      <td>114.60</td>      <td>474069.0</td>      <td>1390785.0</td>    </tr>    <tr>      <th>Bismarck</th>      <td>ND</td>      <td>47.551493</td>      <td>-101.002012</td>      <td>North Dakota</td>      <td>1883.0</td>      <td>26.90</td>      <td>73529.0</td>      <td>128949.0</td>    </tr>    <tr>      <th>Lincoln</th>      <td>NE</td>      <td>41.492537</td>      <td>-99.901813</td>      <td>Nebraska</td>      <td>1867.0</td>      <td>74.60</td>      <td>289102.0</td>      <td>336374.0</td>    </tr>    <tr>      <th>Concord</th>      <td>NH</td>      <td>43.193852</td>      <td>-71.572395</td>      <td>New Hampshire</td>      <td>1808.0</td>      <td>64.30</td>      <td>43627.0</td>      <td>151391.0</td>    </tr>    <tr>      <th>Trenton</th>      <td>NJ</td>      <td>40.058324</td>      <td>-74.405661</td>      <td>New Jersey</td>      <td>1784.0</td>      <td>7.66</td>      <td>83203.0</td>      <td>367430.0</td>    </tr>    <tr>      <th>Santa Fe</th>      <td>NM</td>      <td>34.972730</td>      <td>-105.032363</td>      <td>New Mexico</td>      <td>1610.0</td>      <td>37.30</td>      <td>84683.0</td>      <td>150358.0</td>    </tr>    <tr>      <th>Carson City</th>      <td>NV</td>      <td>38.802610</td>      <td>-116.419389</td>      <td>Nevada</td>      <td>1861.0</td>      <td>143.40</td>      <td>55916.0</td>      <td>55916.0</td>    </tr>    <tr>      <th>Albany</th>      <td>NY</td>      <td>43.299428</td>      <td>-74.217933</td>      <td>New York</td>      <td>1797.0</td>      <td>21.40</td>      <td>96460.0</td>      <td>880381.0</td>    </tr>    <tr>      <th>Columbus</th>      <td>OH</td>      <td>40.417287</td>      <td>-82.907123</td>      <td>Ohio</td>      <td>1816.0</td>      <td>210.30</td>      <td>898553.0</td>      <td>2122271.0</td>    </tr>    <tr>      <th>Oklahoma City</th>      <td>OK</td>      <td>35.007752</td>      <td>-97.092877</td>      <td>Oklahoma</td>      <td>1910.0</td>      <td>620.30</td>      <td>655057.0</td>      <td>1408950.0</td>    </tr>    <tr>      <th>Salem</th>      <td>OR</td>      <td>43.804133</td>      <td>-120.554201</td>      <td>Oregon</td>      <td>1855.0</td>      <td>45.70</td>      <td>174365.0</td>      <td>433903.0</td>    </tr>    <tr>      <th>Harrisburg</th>      <td>PA</td>      <td>41.203322</td>      <td>-77.194525</td>      <td>Pennsylvania</td>      <td>1812.0</td>      <td>8.11</td>      <td>49528.0</td>      <td>577941.0</td>    </tr>    <tr>      <th>Providence</th>      <td>RI</td>      <td>41.580095</td>      <td>-71.477429</td>      <td>Rhode Island</td>      <td>1900.0</td>      <td>18.50</td>      <td>179883.0</td>      <td>1624578.0</td>    </tr>    <tr>      <th>Columbia</th>      <td>SC</td>      <td>33.836081</td>      <td>-81.163725</td>      <td>South Carolina</td>      <td>1786.0</td>      <td>125.20</td>      <td>131674.0</td>      <td>838433.0</td>    </tr>    <tr>      <th>Pierre</th>      <td>SD</td>      <td>43.969515</td>      <td>-99.901813</td>      <td>South Dakota</td>      <td>1889.0</td>      <td>13.00</td>      <td>13646.0</td>      <td>20672.0</td>    </tr>    <tr>      <th>Nashville</th>      <td>TN</td>      <td>35.517491</td>      <td>-86.580447</td>      <td>Tennessee</td>      <td>1826.0</td>      <td>525.90</td>      <td>670820.0</td>      <td>1934317.0</td>    </tr>    <tr>      <th>Austin</th>      <td>TX</td>      <td>31.968599</td>      <td>-99.901813</td>      <td>Texas</td>      <td>1839.0</td>      <td>305.10</td>      <td>978908.0</td>      <td>2227083.0</td>    </tr>    <tr>      <th>Salt Lake City</th>      <td>UT</td>      <td>39.320980</td>      <td>-111.093731</td>      <td>Utah</td>      <td>1858.0</td>      <td>109.10</td>      <td>200567.0</td>      <td>1232696.0</td>    </tr>    <tr>      <th>Richmond</th>      <td>VA</td>      <td>37.431573</td>      <td>-78.656894</td>      <td>Virginia</td>      <td>1780.0</td>      <td>60.10</td>      <td>230436.0</td>      <td>1291900.0</td>    </tr>    <tr>      <th>Montpelier</th>      <td>VT</td>      <td>44.558803</td>      <td>-72.577841</td>      <td>Vermont</td>      <td>1805.0</td>      <td>10.20</td>      <td>7855.0</td>      <td>58409.0</td>    </tr>    <tr>      <th>Olympia</th>      <td>WA</td>      <td>47.751074</td>      <td>-120.740139</td>      <td>Washington</td>      <td>1853.0</td>      <td>16.70</td>      <td>46478.0</td>      <td>290536.0</td>    </tr>    <tr>      <th>Madison</th>      <td>WI</td>      <td>43.784440</td>      <td>-88.787868</td>      <td>Wisconsin</td>      <td>1838.0</td>      <td>68.70</td>      <td>259680.0</td>      <td>664865.0</td>    </tr>    <tr>      <th>Charleston</th>      <td>WV</td>      <td>38.597626</td>      <td>-80.454903</td>      <td>West Virginia</td>      <td>1885.0</td>      <td>31.60</td>      <td>46536.0</td>      <td>257074.0</td>    </tr>    <tr>      <th>Cheyenne</th>      <td>WY</td>      <td>43.075968</td>      <td>-107.290284</td>      <td>Wyoming</td>      <td>1869.0</td>      <td>21.10</td>      <td>64235.0</td>      <td>99500.0</td>    </tr>  </tbody></table>'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "html_table = states.to_html()\n",
     "html_table\n",
